--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,5 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <h1>Profile</h1>
+  <p>Author: Wivern</p>
+  <p>Profession: ネットワーク、サーバエンジニア</p>
 </section>
