octopress-theme-classic

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,9 +1,8 @@
 <section>
   <h1>Profile</h1>
-  {% if site.gravatar_email %}
-    <img src="{% gravatar_image %}" alt="Gravatar of {{site.author}}" title="Gravatar of {{ site.author }}" align="left" style="margin-right:10px;" />
-  {% endif %}
-  <p>Author: Wivern</p>
-  <p>Profession: ネットワーク、サーバエンジニア</p>
+  
+    <img src="http://www.gravatar.com/avatar/d193dda398c5fa836f1d8007d64be8de" alt="Gravatar of wivern" title="Gravatar of wivern" align="left" style="margin-right:10px;" />
+  
+  Hoge Hoge
   <br clear="left">
 </section>
